--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-notifications": "^1.7.4",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
